tests/ui/traits/issue-18400.stderr
error[E0275]: overflow evaluating the requirement `_: Sized`
  --> $DIR/issue-18400.rs:24:7
   |
LL |     0.contains(bits);
   |       ^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_18400`)
note: required for `{integer}` to implement `Set<&[_]>`
  --> $DIR/issue-18400.rs:6:16
   |
LL | impl<'a, T, S> Set<&'a [T]> for S where
   |          -     ^^^^^^^^^^^^     ^
   |          |
   |          unsatisfied trait bound introduced here
   = note: 128 redundant requirements hidden
   = note: required for `{integer}` to implement `Set<&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[&[_]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
